# LLModelViewer

./: CMakeLists.txt  README.md  build.bat  vcpkg.json
src/: CameraControlPanel.cpp  CameraControlPanel.h  Demo.cpp  Demo.h  TriangleDemo.cpp  TriangleDemo.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
src/base/: Demo.cpp  Demo.h  caddemo.cpp  caddemo.h
src/base/camera/: Camera.cpp  Camera.h  CameraControlPanel.cpp  CameraControlPanel.h
src/base/input/: inputmanager.cpp  inputmanager.h
src/base/light/: LightManager.cpp  LightManager.h
src/base/opengl/: glwidget.cpp  glwidget.h
src/base/util/: RayUtils.cpp  RayUtils.h  ResourceManager.h  WorkPlane.cpp  WorkPlane.h  shader.cpp  shader.h
src/cad/data/: GridAxisHelper.cpp  GridAxisHelper.h  document.cpp  document.h  renderer.cpp  renderer.h
src/cad/selection/: Picker.cpp  Picker.h  SelectionManager.cpp  SelectionManager.h
src/demo/triangle/: TriangleDemo.cpp  TriangleDemo.h
src/demo/triangle/shaders/: triangle.fs  triangle.vs
src/shaders/axis/: axis.vs
src/shaders/cadshaders/cube/: cube.fs  cube.vs
src/shaders/cadshaders/line/: line.fs  line.vs
src/shaders/grid/: grid.fs  grid.vs
